# pybx

./: CMakeLists.txt  README.md  TODO.md  TOP-DIR  clean.sh  dipole-pyidl.md
cmake/: pybx-stubs.mak
examples/: CMakeLists.txt
examples/blotter/: CMakeLists.txt
examples/blotter/backend/: Blotter.h  Blotter.py  Blotter.pybx  Blotter.pyidl  CMakeLists.txt  Utils.pybx  run-testdf.cpp  run-testdf.py
examples/blotter/frontend/: App.js  Blotter.js  index.html  package.json  rollup.config.js
examples/simplest/: CMakeLists.txt
examples/simplest.dpl/: CMakeLists.txt  HelloI.cpp  HelloI.h  backend_idl.h  backend_idl.h.BAK  backend_idl.py  build.sh  dipole.cpp  dipole.h  main.cpp  proto.txt  test-cli.cpp
examples/simplest.dpl/backend/: CMakeLists.txt  HelloI.cpp  backend_idl.h  backend_idl.h.BAK  backend_idl.py  main.cpp  main.py  test-cli.cpp  test-cli.py
examples/simplest.dpl/frontend/: App.js  backend.js.BAK
examples/simplest/backend/: CMakeLists.txt  HelloI.cpp  HelloI.h  backend.h  backend.h.TODEL  backend.pybx  backend.pyidl  backend_idl.h  main.cpp  main.py  test-cli.cpp  test-cli.py
examples/simplest/frontend/: App.js  backend.js  backend.js.BAK  package.json
src/: CMakeLists.txt
src/libdipole/: CMakeLists.txt  communicator.cpp  communicator.h  proto.cpp  proto.h  remote-methods.cpp  remote-methods.h
src/libdipole-cpp/: CMakeLists.txt  communicator.cpp  communicator.h  proto.cpp  remote-methods.cpp  remote-methods.h
src/libdipole-js/: index.js
src/libdipole-py/: codegen.py  codegen_cpp.py  codegen_js.py  dipole.py  dipole_idl.py
src/libpybx-cpp/: CMakeLists.txt  cbq.h  communicator.cpp  communicator.h  exception.h  proto.cpp  proto.h  remote-methods.cpp  remote-methods.h
src/libpybx-js/: index.js
src/libpybx-py/: codegen.py  codegen.py.TODEL  codegen_cpp.py  codegen_js.py  codegen_py.py  pybx.py  pybx_comm.py  pybx_idl.py  pybx_json.py  pybx_parser.py  pybx_type_descriptors.py
